--- a/ProjetoMavenJSFPrimeFaces/src/main/resources/application_en.properties
+++ b/ProjetoMavenJSFPrimeFaces/src/main/resources/application_en.properties
@@ -105,3 +105,7 @@ pages.verChaves.menu						= See Keys
 pages.verTabelaCompleta.menu				= Full Table
 pages.verUltimosResultados.menu				= Last Results
 pages.verLocais.menu						= Game Locations
+
+pages.validacoes.title		 				= Register ->Validation Request
+pages.validacoes.menu   			 		= Validation Request
+pages.validacoes.btnAccept	    	 		= Accept
