--- a/ProjetoMavenJSFPrimeFaces/src/main/resources/application_pt.properties
+++ b/ProjetoMavenJSFPrimeFaces/src/main/resources/application_pt.properties
@@ -105,3 +105,7 @@ pages.verChaves.menu						= Ver Chaves
 pages.verTabelaCompleta.menu				= Tabela Completa
 pages.verUltimosResultados.menu				= Ultimos Resultados
 pages.verLocais.menu						= Locais dos Jogos
+
+pages.validacoes.title		 				= Cadastro ->Solicitações de Validação
+pages.validacoes.menu   			 		= Solicitações de Validação
+pages.validacoes.btnAccept	    	 		= Aceitar
